<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LilyPlayer</string>
    <string name="player_list">播放列表</string>
    <string name="player_history">播放记录</string>
    <string name="fill_fan">补番计划</string>
    <string name="favorite">我的收藏</string>
    <string name="setting">设置&amp;反馈</string>

    <string name="setting_play">播放</string>
    <string name="setting_advance">高级</string>
    <string name="setting_other">其他</string>
    <string name="setting_action_after_play">播放完成后动作</string>
    <string name="setting_decode">解码设置</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_open_source_license">开放源代码许可</string>
    <string name="setting_about">关于</string>
    <string name="setting_feedback">反馈</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="current_version">当前版本：</string>

    <string-array name="action_after_play">
        <item>播完暂停</item>
        <item>单P循环</item>
        <item>多P播放</item>
        <item>多P循环</item>
        <item>播完退出</item>
    </string-array>

    <string-array name="action_summary">
        <item>播完暂停：停止播放等待操作</item>
        <item>单P循环：自动循环播放当前视频</item>
        <item>多P播放：自动播放下一P视频</item>
        <item>多P循环：自动播放下一P视频，列表结束后从头开始</item>
        <item>播完退出：退出播放界面</item>
    </string-array>
</resources>