<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.lybeat.lilyplayer.widget.preference.PreferenceCategory android:title="@string/setting_play">

        <com.lybeat.lilyplayer.widget.preference.Preference
            android:entries="@array/action_after_play"
            android:key="action_after_play"
            android:summary="资讯"
            android:title="@string/setting_action_after_play" />

    </com.lybeat.lilyplayer.widget.preference.PreferenceCategory>

    <com.lybeat.lilyplayer.widget.preference.PreferenceCategory android:title="@string/setting_advance">
        <com.lybeat.lilyplayer.widget.preference.Preference
            android:key="decode"
            android:title="@string/setting_decode"/>
    </com.lybeat.lilyplayer.widget.preference.PreferenceCategory>

    <com.lybeat.lilyplayer.widget.preference.PreferenceCategory android:title="@string/setting_other">

        <com.lybeat.lilyplayer.widget.preference.Preference
            android:key="version_update"
            android:title="@string/setting_check_update" />

        <com.lybeat.lilyplayer.widget.preference.Preference
            android:key="open_source_license"
            android:title="@string/setting_open_source_license"/>

        <com.lybeat.lilyplayer.widget.preference.Preference
            android:key="about"
            android:title="@string/setting_about" />

        <com.lybeat.lilyplayer.widget.preference.Preference
            android:key="feedback"
            android:title="@string/setting_feedback" />
    </com.lybeat.lilyplayer.widget.preference.PreferenceCategory>
</PreferenceScreen>